feat: настройка vent-сервиса под feign-клиент