@@ -7,24 +7,25 @@ import org.springframework.data.domain.Pageable;
 import org.springframework.stereotype.Service;
 import org.springframework.transaction.annotation.Transactional;
 import ru.practicum.StatClient;
+import ru.practicum.client.RequestClient;
+import ru.practicum.client.UserClient;
+import ru.practicum.constants.Constants;
+import ru.practicum.dto.event.*;
+import ru.practicum.dto.request.ParticipationRequestDto;
+import ru.practicum.dto.request.RequestStatus;
+import ru.practicum.dto.user.UserShortDto;
 import ru.practicum.ewm.StatRequestParamDto;
 import ru.practicum.ewm.StatResponseDto;
-import ru.practicum.ewm.constants.Constants;
-import ru.practicum.ewm.dto.event.*;
-import ru.practicum.ewm.dto.request.ParticipationRequestDto;
-import ru.practicum.ewm.exception.ConflictException;
-import ru.practicum.ewm.exception.CreationRulesException;
-import ru.practicum.ewm.exception.NotFoundException;
-import ru.practicum.ewm.exception.ValidationException;
-import ru.practicum.ewm.mapper.EventMapper;
-import ru.practicum.ewm.mapper.LocationMapper;
-import ru.practicum.ewm.mapper.RequestMapper;
-import ru.practicum.ewm.model.Category;
-import ru.practicum.ewm.model.User;
-import ru.practicum.ewm.model.event.*;
-import ru.practicum.ewm.model.request.ParticipationRequest;
-import ru.practicum.ewm.model.request.RequestStatus;
-import ru.practicum.ewm.repository.*;
+import ru.practicum.exception.ConflictException;
+import ru.practicum.exception.CreationRulesException;
+import ru.practicum.exception.NotFoundException;
+import ru.practicum.exception.ValidationException;
+import ru.practicum.mapper.EventMapper;
+import ru.practicum.mapper.LocationMapper;
+import ru.practicum.model.*;
+import ru.practicum.repository.CategoryRepository;
+import ru.practicum.repository.EventRepository;
+import ru.practicum.repository.LocationRepository;
 
 import java.time.LocalDateTime;
 import java.util.*;
@@ -35,78 +36,97 @@ import java.util.stream.Collectors;
 @RequiredArgsConstructor
 @Slf4j
 public class EventServiceImpl implements EventService {
+
     private final EventRepository eventRepository;
     private final LocationRepository locationRepository;
     private final CategoryRepository categoryRepository;
-    private final UserRepository userRepository;
-    private final RequestRepository requestRepository;
+    private final UserClient userClient;
+    private final RequestClient requestClient;
     private final StatClient statClient;
+
+    // ==================== ОСНОВНЫЕ МЕТОДЫ ====================
 
     @Transactional
     @Override
     public EventFullDto addEvent(Long userId, NewEventDto dto) {
-        Category category = categoryRepository.findById(dto.getCategory()).orElseThrow(() -> new NotFoundException(
-                "Добавление события. Категория с ID: " + dto.getCategory() + " не найдена."));
+        log.info("Создание события пользователем {}", userId);
 
-        User initiator = userRepository.findById(userId).orElseThrow(() -> new NotFoundException(
-                "Добавление события. Пользователь с ID: " + userId + " не найден."));
+        // Проверяем пользователя через Feign
+        UserShortDto initiator;
+        try {
+            initiator = userClient.getUserShort(userId);
+            if (initiator == null) {
+                throw new NotFoundException("Пользователь с ID: " + userId + " не найден.");
+            }
+        } catch (Exception e) {
+            log.error("Ошибка при проверке пользователя: {}", e.getMessage());
+            throw new NotFoundException("Пользователь с ID: " + userId + " не найден или сервис недоступен.");
+        }
+
+        Category category = categoryRepository.findById(dto.getCategory())
+                .orElseThrow(() -> new NotFoundException("Категория с ID: " + dto.getCategory() + " не найдена."));
 
         Location location = locationRepository.save(LocationMapper.dtoToLocation(dto.getLocation()));
 
         LocalDateTime eventDate = LocalDateTime.parse(dto.getEventDate(), Constants.FORMATTER);
 
         if (eventDate.isBefore(LocalDateTime.now().plusHours(2))) {
-            log.error("Добавление события. " +
-                    "Время начала события должно быть не ранее, чем через два часа от текущего момента.");
-            throw new ValidationException("Время начала события должно быть не ранее, " +
-                    "чем через два часа от текущего момента.");
-        }
-
-        if (dto.getPaid() == null) {
-            dto.setPaid(false);
-        }
-
-        if (dto.getParticipantLimit() == null) {
-            dto.setParticipantLimit(0);
-        }
-
-        if (dto.getRequestModeration() == null) {
-            dto.setRequestModeration(true);
+            throw new ValidationException("Время начала события должно быть не ранее, чем через два часа от текущего момента.");
         }
 
         Event newEvent = EventMapper.dtoToEvent(
                 dto,
-                category,
+                category.getId(),
                 LocalDateTime.now(),
-                initiator,
+                userId,
                 location,
                 null,
                 EventState.PENDING
         );
 
-        newEvent.setCompilations(new ArrayList<>());
-
         Event addedEvent = eventRepository.save(newEvent);
-        return EventMapper.eventToFullDto(addedEvent, 0L, 0L);
+        log.info("Создано событие с ID: {}", addedEvent.getId());
+
+        return EventMapper.eventToFullDto(addedEvent, initiator, category, 0L, 0L);
     }
 
     @Override
     public List<EventShortDto> getEventsOfUser(Long userId, Integer from, Integer size) {
+        log.info("Получение событий пользователя: userId={}, from={}, size={}", userId, from, size);
+
+        // Проверяем пользователя через Feign
+        try {
+            if (!userClient.userExists(userId)) {
+                throw new NotFoundException("Пользователь с ID: " + userId + " не найден.");
+            }
+        } catch (Exception e) {
+            log.error("Ошибка при проверке пользователя: {}", e.getMessage());
+            throw new NotFoundException("Пользователь с ID: " + userId + " не найден или сервис недоступен.");
+        }
+
         Pageable pageable = PageRequest.of(from / size, size);
-        List<Event> events = eventRepository.findAllByInitiator_IdOrderByEventDateAsc(userId, pageable);
-        if (events == null || events.isEmpty()) {
-            log.info("Получение списка событий пользователя. " +
-                    "По заданным параметрам (userId: {}, from: {}, size {}) события не найдены.", userId, from, size);
+        List<Event> events = eventRepository.findAllByInitiatorIdOrderByEventDateAsc(userId, pageable);
+
+        if (events.isEmpty()) {
+            log.info("События для пользователя {} не найдены", userId);
             return new ArrayList<>();
         }
+
+        // Получаем дополнительные данные
         Map<Long, Long> confirmedRequestsCount = getConfirmedRequestsCount(events);
         Map<Long, Long> viewsStats = getViewsCount(events);
+        Map<Long, Category> categories = getCategories(events);
+        Map<Long, UserShortDto> users = getUsers(events);
+
         List<EventShortDto> result = new ArrayList<>();
         for (Event event : events) {
             Long views = viewsStats.getOrDefault(event.getId(), 0L);
             Long confirmedRequests = confirmedRequestsCount.getOrDefault(event.getId(), 0L);
-            EventShortDto eventShortDto = EventMapper.eventToShortDto(event,
-                    confirmedRequests, views);
+            Category category = categories.get(event.getCategoryId());
+            UserShortDto user = users.get(event.getInitiatorId());
+
+            EventShortDto eventShortDto = EventMapper.eventToShortDto(
+                    event, user, category, confirmedRequests, views);
             result.add(eventShortDto);
         }
         return result;
@@ -114,40 +134,55 @@ public class EventServiceImpl implements EventService {
 
     @Override
     public EventFullDto getEventById(Long userId, Long eventId) {
-        Event event = eventRepository.findById(eventId).orElseThrow(() -> new NotFoundException(
-                "Получения данных о событии. Событие с ID: " + eventId + " не найдено."));
+        log.info("Получение события {} пользователем {}", eventId, userId);
 
-        if (!event.getInitiator().getId().equals(userId)) {
-            log.error("Получение данных о событии. " +
-                    "Пользователь с ID: {} не является инициатором события с ID: {}", userId, eventId);
+        Event event = eventRepository.findById(eventId)
+                .orElseThrow(() -> new NotFoundException("Событие с ID: " + eventId + " не найдено."));
+
+        // Проверяем, что пользователь является инициатором
+        if (!event.getInitiatorId().equals(userId)) {
             throw new NotFoundException("Пользователь с ID: " + userId +
                     " не является инициатором события с ID: " + eventId);
         }
 
-        Map<Long, Long> confirmedRequestsCount = getConfirmedRequestsCount(List.of(event));
-        Map<Long, Long> viewsStats = getViewsCount(List.of(event));
-        Long views = viewsStats.getOrDefault(event.getId(), 0L);
-        Long confirmedRequests = confirmedRequestsCount.getOrDefault(event.getId(), 0L);
-        return EventMapper.eventToFullDto(event, confirmedRequests, views);
+        // Получаем данные
+        UserShortDto initiator = getUser(event.getInitiatorId());
+        Category category = getCategory(event.getCategoryId());
+        Long views = getViewsCount(event);
+        Long confirmedRequests = getConfirmedRequestsCount(event);
+
+        return EventMapper.eventToFullDto(event, initiator, category, confirmedRequests, views);
     }
 
     @Override
     public List<EventShortDto> getShortEventsInfoByIds(List<Long> eventIds) {
+        log.info("Получение краткой информации о событиях по ID: {}", eventIds);
+
+        if (eventIds == null || eventIds.isEmpty()) {
+            return new ArrayList<>();
+        }
+
         List<Event> events = eventRepository.findAllByIdInOrderByIdAsc(eventIds);
 
-        if (events == null || events.isEmpty()) {
-            log.info("Получение событий по списку ID. По указанным в списке ID событий события не найдены.");
+        if (events.isEmpty()) {
+            log.info("События по указанным ID не найдены");
             return new ArrayList<>();
         }
 
         Map<Long, Long> confirmedRequestsCount = getConfirmedRequestsCount(events);
         Map<Long, Long> viewsStats = getViewsCount(events);
+        Map<Long, Category> categories = getCategories(events);
+        Map<Long, UserShortDto> users = getUsers(events);
+
         List<EventShortDto> result = new ArrayList<>();
         for (Event event : events) {
             Long views = viewsStats.getOrDefault(event.getId(), 0L);
             Long confirmedRequests = confirmedRequestsCount.getOrDefault(event.getId(), 0L);
-            EventShortDto eventShortDto = EventMapper.eventToShortDto(event,
-                    confirmedRequests, views);
+            Category category = categories.get(event.getCategoryId());
+            UserShortDto user = users.get(event.getInitiatorId());
+
+            EventShortDto eventShortDto = EventMapper.eventToShortDto(
+                    event, user, category, confirmedRequests, views);
             result.add(eventShortDto);
         }
         return result;
@@ -156,41 +191,37 @@ public class EventServiceImpl implements EventService {
     @Transactional
     @Override
     public EventFullDto patchEventById(Long userId, Long eventId, UpdateEventUserRequest dto) {
-        Event oldEvent = eventRepository.findById(eventId).orElseThrow(() -> new NotFoundException(
-                "Обновление данных события. Событие с ID: " + eventId + " не найдено."));
+        log.info("Обновление события {} пользователем {}", eventId, userId);
 
-        if (!oldEvent.getInitiator().getId().equals(userId)) {
-            log.error("Обновление данных события. " +
-                    "Пользователь с ID: {} не является инициатором события с ID: {}", userId, eventId);
+        Event oldEvent = eventRepository.findById(eventId)
+                .orElseThrow(() -> new NotFoundException("Событие с ID: " + eventId + " не найдено."));
+
+        // Проверяем, что пользователь является инициатором
+        if (!oldEvent.getInitiatorId().equals(userId)) {
             throw new NotFoundException("Пользователь с ID: " + userId +
                     " не является инициатором события с ID: " + eventId);
         }
 
+        // Проверяем статус
         if (oldEvent.getState().equals(EventState.PUBLISHED)) {
-            log.error("Обновление данных события. Изменить можно только отмененные события " +
-                    "или события в состоянии ожидания модерации.");
             throw new CreationRulesException("Изменить можно только отмененные события " +
                     "или события в состоянии ожидания модерации.");
         }
 
+        // Обновляем поля
         if (dto.getEventDate() != null) {
             LocalDateTime eventDate = LocalDateTime.parse(dto.getEventDate(), Constants.FORMATTER);
-
             if (eventDate.isBefore(LocalDateTime.now().plusHours(2))) {
-                log.error("Обновление данных события. Время начала события должно быть не ранее, " +
-                        "чем через два часа от текущего момента.");
                 throw new ValidationException("Время начала события должно быть не ранее, " +
                         "чем через два часа от текущего момента.");
             }
-
             oldEvent.setEventDate(eventDate);
         }
 
         if (dto.getCategory() != null) {
-            Category category = categoryRepository.findById(dto.getCategory()).orElseThrow(() -> new NotFoundException(
-                    "Обновление данных события. Категория с ID: " + dto.getCategory() + " не найдена."));
-
-            oldEvent.setCategory(category);
+            Category category = categoryRepository.findById(dto.getCategory())
+                    .orElseThrow(() -> new NotFoundException("Категория с ID: " + dto.getCategory() + " не найдена."));
+            oldEvent.setCategoryId(category.getId());
         }
 
         if (dto.getLocation() != null) {
@@ -218,167 +249,156 @@ public class EventServiceImpl implements EventService {
             oldEvent.setRequestModeration(dto.getRequestModeration());
         }
 
-        if (dto.getStateAction() != null) {
-            if (dto.getStateAction().equals(UserStateAction.SEND_TO_REVIEW.toString())) {
-                oldEvent.setState(EventState.PENDING);
-            }
-            if (dto.getStateAction().equals(UserStateAction.CANCEL_REVIEW.toString())) {
-                oldEvent.setState(EventState.CANCELED);
-            }
-        }
-
         if (dto.getTitle() != null) {
             oldEvent.setTitle(dto.getTitle());
         }
 
-        Event patchedEvent = eventRepository.save(oldEvent);
+        // Обновляем статус
+        if (dto.getStateAction() != null) {
+            if (dto.getStateAction().equals(UserStateAction.SEND_TO_REVIEW.toString())) {
+                oldEvent.setState(EventState.PENDING);
+            } else if (dto.getStateAction().equals(UserStateAction.CANCEL_REVIEW.toString())) {
+                oldEvent.setState(EventState.CANCELED);
+            }
+        }
 
-        Map<Long, Long> confirmedRequestsCount = getConfirmedRequestsCount(List.of(patchedEvent));
-        Map<Long, Long> viewsStats = getViewsCount(List.of(patchedEvent));
-        Long views = viewsStats.getOrDefault(patchedEvent.getId(), 0L);
-        Long confirmedRequests = confirmedRequestsCount.getOrDefault(patchedEvent.getId(), 0L);
-        return EventMapper.eventToFullDto(patchedEvent, confirmedRequests, views);
+        Event patchedEvent = eventRepository.save(oldEvent);
+        log.info("Событие {} обновлено, новый статус: {}", eventId, patchedEvent.getState());
+
+        // Получаем данные для ответа
+        UserShortDto initiator = getUser(patchedEvent.getInitiatorId());
+        Category category = getCategory(patchedEvent.getCategoryId());
+        Long views = getViewsCount(patchedEvent);
+        Long confirmedRequests = getConfirmedRequestsCount(patchedEvent);
+
+        return EventMapper.eventToFullDto(patchedEvent, initiator, category, confirmedRequests, views);
     }
 
     @Override
     public List<ParticipationRequestDto> getRequestsOfEvent(Long userId, Long eventId) {
-        Event event = eventRepository.findById(eventId).orElseThrow(() -> new NotFoundException(
-                "Получение запросов на участие в событии. Событие с ID: " + eventId + " не найдено."));
-        if (!event.getInitiator().getId().equals(userId)) {
-            log.error("Получение запросов на участие в событии. " +
-                    "Пользователь с ID: {} не является инициатором события с ID: {}", userId, eventId);
+        log.info("Получение запросов на участие в событии {} пользователем {}", eventId, userId);
+
+        Event event = eventRepository.findById(eventId)
+                .orElseThrow(() -> new NotFoundException("Событие с ID: " + eventId + " не найдено."));
+
+        if (!event.getInitiatorId().equals(userId)) {
             throw new NotFoundException("Пользователь с ID: " + userId +
                     " не является инициатором события с ID: " + eventId);
         }
 
-        List<ParticipationRequest> requests = requestRepository.findAllByEvent_Id(eventId);
-        if (requests == null || requests.isEmpty()) {
-            log.info("Получение запросов на участие в событии. По событию с ID: {} запросов не найдено.", eventId);
-            return new ArrayList<>();
+        // Получаем запросы через Feign клиент
+        try {
+            return requestClient.getRequestsByEvent(eventId);
+        } catch (Exception e) {
+            log.error("Ошибка при получении запросов: {}", e.getMessage());
+            throw new NotFoundException("Не удалось получить запросы на участие.");
         }
-        return requests.stream()
-                .map(RequestMapper::toParticipationRequestDto)
-                .collect(Collectors.toList());
     }
 
     @Transactional
     @Override
     public EventRequestStatusUpdateResult patchRequestsStatusOfEvent(Long userId, Long eventId,
                                                                      EventRequestStatusUpdateRequest dto) {
-        Event event = eventRepository.findById(eventId).orElseThrow(() -> new NotFoundException(
-                "Обновление данных события. Событие с ID: " + eventId + " не найдено."));
+        log.info("Обновление статусов запросов для события {} пользователем {}", eventId, userId);
 
-        if (!event.getInitiator().getId().equals(userId)) {
-            log.error("Обновление статусов заявок. " +
-                    "Пользователь с ID: {} не является инициатором события с ID: {}", userId, eventId);
-            throw new NotFoundException("Пользователь с ID: " +
-                    userId + " не является инициатором события с ID: " + eventId);
+        Event event = eventRepository.findById(eventId)
+                .orElseThrow(() -> new NotFoundException("Событие с ID: " + eventId + " не найдено."));
+
+        if (!event.getInitiatorId().equals(userId)) {
+            throw new NotFoundException("Пользователь с ID: " + userId +
+                    " не является инициатором события с ID: " + eventId);
+        }
+
+        // Получаем запросы через Feign клиент
+        List<ParticipationRequestDto> requests;
+        try {
+            requests = requestClient.getRequestsByEvent(eventId);
+        } catch (Exception e) {
+            log.error("Ошибка при получении запросов: {}", e.getMessage());
+            throw new NotFoundException("Не удалось получить запросы на участие.");
+        }
+
+        // Фильтруем запросы по ID
+        List<ParticipationRequestDto> targetRequests = requests.stream()
+                .filter(r -> dto.getRequestIds().contains(r.getId()))
+                .toList();
+
+        if (targetRequests.size() != dto.getRequestIds().size()) {
+            throw new NotFoundException("Некоторые запросы не найдены.");
+        }
+
+        // Проверяем, что все запросы в статусе PENDING
+        for (ParticipationRequestDto request : targetRequests) {
+            if (!"PENDING".equals(request.getStatus())) {
+                throw new CreationRulesException("Статус можно изменить только у заявок, " +
+                        "находящихся в состоянии ожидания.");
+            }
+        }
+
+        // Получаем количество подтвержденных запросов
+        Long approvedRequestsCount;
+        try {
+            approvedRequestsCount = requestClient.getConfirmedRequestsCount(eventId);
+        } catch (Exception e) {
+            log.error("Ошибка при получении количества подтвержденных запросов: {}", e.getMessage());
+            throw new NotFoundException("Не удалось получить количество запросов.");
         }
 
         Long participantLimit = event.getParticipantLimit().longValue();
-        Long approvedRequestsCount = requestRepository.countByEvent_IdAndStatus(eventId, RequestStatus.CONFIRMED);
 
         if (participantLimit > 0 && approvedRequestsCount >= participantLimit) {
-            log.error("Обновление статусов заявок. " +
-                    "Достигнут лимит одобренных заявок ({}), нельзя подтвердить больше.", approvedRequestsCount);
             throw new ConflictException("Достигнут лимит участников события");
         }
-        List<ParticipationRequest> allRequests = requestRepository.findAllById(dto.getRequestIds());
 
-        if (allRequests.size() != dto.getRequestIds().size()) {
-            log.error("Обновление статусов заявок. Некоторые заявки не найдены.");
-            throw new NotFoundException("Некоторые заявки не найдены");
-        }
+        List<ParticipationRequestDto> approvedRequests = new ArrayList<>();
+        List<ParticipationRequestDto> rejectedRequests = new ArrayList<>();
 
-        for (ParticipationRequest request : allRequests) {
-            if (request.getStatus() != RequestStatus.PENDING) {
-                log.error("Обновление статусов заявок. Заявка с ID: {} имеет статус {}, а не PENDING",
-                        request.getId(), request.getStatus());
-                throw new CreationRulesException("Статус можно изменить только у заявок, " +
-                        "находящихся в состоянии ожидания: " + RequestStatus.PENDING +
-                        ". Текущий статус заявки: " + request.getStatus());
-            }
-        }
+        long currentApproved = approvedRequestsCount;
 
-        List<ParticipationRequest> requests = allRequests;
-
-        if (dto.getStatus() == RequestStatus.REJECTED) {
-            // Отклоняем все заявки
-            for (ParticipationRequest request : requests) {
-                request.setStatus(RequestStatus.REJECTED);
-            }
-            requestRepository.saveAll(requests);
-            List<ParticipationRequestDto> resultRejectedRequestsDto = requests.stream()
-                    .map(RequestMapper::toParticipationRequestDto)
-                    .toList();
-            return new EventRequestStatusUpdateResult(List.of(), resultRejectedRequestsDto);
-        }
-
-        if (dto.getRequestIds().size() != requests.size()) {
-            if (participantLimit.equals(approvedRequestsCount) && participantLimit > 0) {
-                log.error("Обновление статусов заявок на участие в событии. " +
-                        "Достигнут лимит одобренных заявок в событии с ID: {}.", eventId);
-                throw new CreationRulesException("Достигнут лимит одобренных заявок в событии с ID: " + eventId + ".");
-            }
-        }
-
-        List<ParticipationRequest> approvedRequests = new ArrayList<>();
-        List<ParticipationRequest> rejectedRequests = new ArrayList<>();
-
-        for (ParticipationRequest request : requests) {
-            if (approvedRequestsCount < participantLimit || participantLimit == 0) {
-                request.setStatus(RequestStatus.CONFIRMED);
+        for (ParticipationRequestDto request : targetRequests) {
+            if (dto.getStatus() == RequestStatus.REJECTED) {
+                // Отклоняем запрос
+                rejectedRequests.add(request);
+            } else if (currentApproved < participantLimit || participantLimit == 0) {
+                // Подтверждаем запрос
                 approvedRequests.add(request);
-                approvedRequestsCount++;
+                currentApproved++;
             } else {
-                request.setStatus(RequestStatus.REJECTED);
+                // Отклоняем, если лимит достигнут
                 rejectedRequests.add(request);
             }
         }
 
-        requestRepository.saveAll(approvedRequests);
-        requestRepository.saveAll(rejectedRequests);
+        log.info("Подтверждено запросов: {}, отклонено: {}", approvedRequests.size(), rejectedRequests.size());
 
-        List<ParticipationRequestDto> resultApprovedRequestsDto = approvedRequests.stream()
-                .map(RequestMapper::toParticipationRequestDto)
-                .toList();
-        List<ParticipationRequestDto> resultRejectedRequestsDto = rejectedRequests.stream()
-                .map(RequestMapper::toParticipationRequestDto)
-                .toList();
-
-        return new EventRequestStatusUpdateResult(resultApprovedRequestsDto, resultRejectedRequestsDto);
+        return new EventRequestStatusUpdateResult(approvedRequests, rejectedRequests);
     }
 
     @Override
     public List<EventFullDto> getEventsByAdminRequest(AdminEventRequestParam param) {
-        log.info("Уровень Admin. Получение списка событий по параметрам: users={}, states={}, categories={}, " +
-                        "rangeStart={}, rangeEnd={}, from={}, size={}",
-                param.getUsers(), param.getStates(), param.getCategories(),
-                param.getRangeStart(), param.getRangeEnd(), param.getFrom(), param.getSize());
-
-        boolean hasInvalidUsers = param.getUsers() != null && param.getUsers().isEmpty();
-        boolean hasInvalidCategories = param.getCategories() != null && param.getCategories().isEmpty();
-
-        if (hasInvalidUsers || hasInvalidCategories) {
-            log.info("Уровень Admin. Переданы невалидные ID (0 или отрицательные). Возвращаем пустой список.");
-            return new ArrayList<>();
-        }
+        log.info("Admin поиск событий: {}", param);
 
         Pageable pageable = PageRequest.of(param.getFrom() / param.getSize(), param.getSize());
         List<Event> events = eventRepository.findByAdminRequest(param, pageable);
 
-        if (events == null || events.isEmpty()) {
-            log.info("Уровень Admin. Получение списка событий. По заданным параметрам события не найдены.");
+        if (events.isEmpty()) {
             return new ArrayList<>();
         }
 
         Map<Long, Long> confirmedRequestsCount = getConfirmedRequestsCount(events);
         Map<Long, Long> viewsStats = getViewsCount(events);
+        Map<Long, Category> categories = getCategories(events);
+        Map<Long, UserShortDto> users = getUsers(events);
+
         List<EventFullDto> result = new ArrayList<>();
         for (Event event : events) {
             Long views = viewsStats.getOrDefault(event.getId(), 0L);
             Long confirmedRequests = confirmedRequestsCount.getOrDefault(event.getId(), 0L);
-            EventFullDto eventFullDto = EventMapper.eventToFullDto(event, confirmedRequests, views);
+            Category category = categories.get(event.getCategoryId());
+            UserShortDto user = users.get(event.getInitiatorId());
+
+            EventFullDto eventFullDto = EventMapper.eventToFullDto(
+                    event, user, category, confirmedRequests, views);
             result.add(eventFullDto);
         }
         return result;
@@ -387,12 +407,12 @@ public class EventServiceImpl implements EventService {
     @Transactional
     @Override
     public EventFullDto patchEventByIdByAdmin(Long eventId, UpdateEventAdminRequest dto) {
-        Event oldEvent = eventRepository.findById(eventId).orElseThrow(() -> new NotFoundException(
-                "Уровень Admin. Обновление данных события. Событие с ID: " + eventId + " не найдено."));
+        log.info("Admin обновление события {}", eventId);
 
-        log.info("Публикация события. Текущий статус: {}, eventDate: {}",
-                oldEvent.getState(), oldEvent.getEventDate());
+        Event oldEvent = eventRepository.findById(eventId)
+                .orElseThrow(() -> new NotFoundException("Событие с ID: " + eventId + " не найдено."));
 
+        // Обработка изменения статуса
         if (dto.getStateAction() != null) {
             if (dto.getStateAction().equals(AdminStateAction.PUBLISH_EVENT.toString())
                     && oldEvent.getState().equals(EventState.PENDING)) {
@@ -402,36 +422,29 @@ public class EventServiceImpl implements EventService {
                     && !oldEvent.getState().equals(EventState.PUBLISHED)) {
                 oldEvent.setState(EventState.CANCELED);
             } else {
-                log.error("Уровень Admin. Обновление данных события. " +
-                        "Опубликовать можно только событие, ожидающее публикации. " +
-                        "Отклонить можно только событие, которое не опубликовано.");
-                throw new CreationRulesException("Обновление данных события администратором. " +
-                        "Опубликовать можно только событие, ожидающее публикации. " +
+                throw new CreationRulesException("Опубликовать можно только событие, ожидающее публикации. " +
                         "Отклонить можно только событие, которое не опубликовано.");
             }
         }
 
+        // Обновление даты
         if (dto.getEventDate() != null) {
             LocalDateTime eventDate = LocalDateTime.parse(dto.getEventDate(), Constants.FORMATTER);
-
             if (eventDate.isBefore(LocalDateTime.now().plusHours(1))) {
-                log.error("Уровень Admin. Обновление данных события. " +
-                        "Время начала события должно быть не ранее, чем через час от текущего момента.");
-                throw new ValidationException("Обновление данных события администратором. " +
-                        "Время начала события должно быть не ранее, чем через час от текущего момента.");
+                throw new ValidationException("Время начала события должно быть не ранее, " +
+                        "чем через час от текущего момента.");
             }
-
             oldEvent.setEventDate(eventDate);
         }
 
+        // Обновление категории
         if (dto.getCategory() != null) {
-            Category category = categoryRepository.findById(dto.getCategory()).orElseThrow(() -> new NotFoundException(
-                    "Обновление данных события администратором. " +
-                            "Категория с ID: " + dto.getCategory() + " не найдена."));
-
-            oldEvent.setCategory(category);
+            Category category = categoryRepository.findById(dto.getCategory())
+                    .orElseThrow(() -> new NotFoundException("Категория с ID: " + dto.getCategory() + " не найдена."));
+            oldEvent.setCategoryId(category.getId());
         }
 
+        // Обновление локации
         if (dto.getLocation() != null) {
             if (oldEvent.getLocation() != null) {
                 oldEvent.getLocation().setLat(dto.getLocation().getLat());
@@ -442,6 +455,7 @@ public class EventServiceImpl implements EventService {
             }
         }
 
+        // Обновление других полей
         if (dto.getAnnotation() != null) {
             oldEvent.setAnnotation(dto.getAnnotation());
         }
@@ -467,146 +481,226 @@ public class EventServiceImpl implements EventService {
         }
 
         Event patchedEvent = eventRepository.save(oldEvent);
-        log.info("После сохранения: статус = {}, publishedOn = {}",
-                patchedEvent.getState(), patchedEvent.getPublishedOn());
+        log.info("Событие {} обновлено администратором, статус: {}", eventId, patchedEvent.getState());
 
-        Map<Long, Long> confirmedRequestsCount = getConfirmedRequestsCount(List.of(patchedEvent));
-        Map<Long, Long> viewsStats = getViewsCount(List.of(patchedEvent));
-        Long views = viewsStats.getOrDefault(patchedEvent.getId(), 0L);
-        Long confirmedRequests = confirmedRequestsCount.getOrDefault(patchedEvent.getId(), 0L);
-        return EventMapper.eventToFullDto(patchedEvent, confirmedRequests, views);
+        // Получаем данные для ответа
+        UserShortDto initiator = getUser(patchedEvent.getInitiatorId());
+        Category category = getCategory(patchedEvent.getCategoryId());
+        Long views = getViewsCount(patchedEvent);
+        Long confirmedRequests = getConfirmedRequestsCount(patchedEvent);
+
+        return EventMapper.eventToFullDto(patchedEvent, initiator, category, confirmedRequests, views);
     }
 
     @Override
     public List<EventShortDto> getEventsByPublicRequest(PublicEventRequestParam param) {
         log.info("Публичный поиск событий: {}", param);
 
-        Integer from = param.getFrom() != null ? param.getFrom() : 0;
-        Integer size = param.getSize() != null && param.getSize() > 0 ? param.getSize() : 10;
-
-        if (size <= 0) {
-            size = 10;
-        }
-        if (from < 0) {
-            from = 0;
-        }
-
-        LocalDateTime rangeStart = null;
-        LocalDateTime rangeEnd = null;
-
-        if (param.getRangeStart() != null && !param.getRangeStart().isBlank()) {
-            rangeStart = LocalDateTime.parse(param.getRangeStart(), Constants.FORMATTER);
-        }
-        if (param.getRangeEnd() != null && !param.getRangeEnd().isBlank()) {
-            rangeEnd = LocalDateTime.parse(param.getRangeEnd(), Constants.FORMATTER);
-        }
-
-        if (rangeStart != null && rangeEnd != null && rangeStart.isAfter(rangeEnd)) {
-            throw new ValidationException("Дата начала диапазона не может быть позже даты окончания");
-        }
-
-        Pageable pageable = PageRequest.of(from / size, size);
+        Pageable pageable = PageRequest.of(param.getFrom() / param.getSize(), param.getSize());
         List<Event> events = eventRepository.findByPublicRequest(param, pageable);
 
-        if (events == null || events.isEmpty()) {
-            log.info("Уровень Public. Получение списка событий. По заданным параметрам " +
-                    "(param: {}, from: {}, size {}) события не найдены.", param, from, size);
+        if (events.isEmpty()) {
             return new ArrayList<>();
         }
 
         Map<Long, Long> confirmedRequestsCount = getConfirmedRequestsCount(events);
+        Map<Long, Long> viewsStats = getViewsCount(events);
+        Map<Long, Category> categories = getCategories(events);
+        Map<Long, UserShortDto> users = getUsers(events);
 
+        // Фильтрация по availability
         if (Boolean.TRUE.equals(param.getOnlyAvailable())) {
-            Predicate<Event> isAvailable = event -> event.getParticipantLimit() >
-                    confirmedRequestsCount.getOrDefault(event.getId(), 0L);
             events = events.stream()
-                    .filter(isAvailable)
+                    .filter(event -> event.getParticipantLimit() == 0 ||
+                            event.getParticipantLimit() > confirmedRequestsCount.getOrDefault(event.getId(), 0L))
                     .toList();
         }
 
-        Map<Long, Long> viewsStats = getViewsCount(events);
         List<EventShortDto> result = new ArrayList<>();
         for (Event event : events) {
             Long views = viewsStats.getOrDefault(event.getId(), 0L);
             Long confirmedRequests = confirmedRequestsCount.getOrDefault(event.getId(), 0L);
-            EventShortDto eventShortDto = EventMapper.eventToShortDto(event,
-                    confirmedRequests, views);
+            Category category = categories.get(event.getCategoryId());
+            UserShortDto user = users.get(event.getInitiatorId());
+
+            EventShortDto eventShortDto = EventMapper.eventToShortDto(
+                    event, user, category, confirmedRequests, views);
             result.add(eventShortDto);
         }
 
         String sort = param.getSort();
-        if (sort != null && sort.equalsIgnoreCase("views")) {
+        if (sort != null && sort.equalsIgnoreCase("VIEWS")) {
             return result.stream()
                     .sorted(Comparator.comparingLong(EventShortDto::getViews).reversed())
                     .toList();
-        } else {
-            return result;
         }
+        return result;
     }
 
     @Override
     public EventFullDto getEventByIdByPublicRequest(Long eventId) {
-        Event event = eventRepository.findById(eventId).orElseThrow(() -> new NotFoundException(
-                "Публичный запрос на получение данных о событии. Событие с ID: " + eventId + " не найдено."));
+        log.info("Публичное получение события {}", eventId);
+
+        Event event = eventRepository.findById(eventId)
+                .orElseThrow(() -> new NotFoundException("Событие с ID: " + eventId + " не найдено."));
 
         if (!event.getState().equals(EventState.PUBLISHED)) {
-            log.error("Уровень Public. Можно получить данные только события со статусом {}.", EventState.PUBLISHED);
-            throw new NotFoundException("Публичный запрос на получение данных о событии. " +
-                    "Можно получить данные только опубликованного события.");
+            throw new NotFoundException("Можно получить данные только опубликованного события.");
         }
 
-        Map<Long, Long> confirmedRequestsCount = getConfirmedRequestsCount(List.of(event));
-        Map<Long, Long> viewsStats = getViewsCount(List.of(event));
-        Long views = viewsStats.getOrDefault(event.getId(), 0L);
-        Long confirmedRequests = confirmedRequestsCount.getOrDefault(event.getId(), 0L);
-        return EventMapper.eventToFullDto(event, confirmedRequests, views);
+        UserShortDto initiator = getUser(event.getInitiatorId());
+        Category category = getCategory(event.getCategoryId());
+        Long views = getViewsCount(event);
+        Long confirmedRequests = getConfirmedRequestsCount(event);
+
+        return EventMapper.eventToFullDto(event, initiator, category, confirmedRequests, views);
+    }
+
+    // ==================== МЕТОДЫ ДЛЯ FEIGN КЛИЕНТОВ ====================
+
+    @Override
+    public boolean eventExists(Long eventId) {
+        return eventRepository.existsById(eventId);
+    }
+
+    @Override
+    public EventFullDto getEventFull(Long eventId) {
+        log.info("Получение полной информации о событии {}", eventId);
+
+        Event event = eventRepository.findById(eventId)
+                .orElseThrow(() -> new NotFoundException("Событие с ID: " + eventId + " не найдено."));
+
+        UserShortDto initiator = getUser(event.getInitiatorId());
+        Category category = getCategory(event.getCategoryId());
+        Long views = getViewsCount(event);
+        Long confirmedRequests = getConfirmedRequestsCount(event);
+
+        return EventMapper.eventToFullDto(event, initiator, category, confirmedRequests, views);
+    }
+
+    @Override
+    public EventShortDto getEventShort(Long eventId) {
+        log.info("Получение краткой информации о событии {}", eventId);
+
+        Event event = eventRepository.findById(eventId)
+                .orElseThrow(() -> new NotFoundException("Событие с ID: " + eventId + " не найдено."));
+
+        UserShortDto initiator = getUser(event.getInitiatorId());
+        Category category = getCategory(event.getCategoryId());
+        Long views = getViewsCount(event);
+        Long confirmedRequests = getConfirmedRequestsCount(event);
+
+        return EventMapper.eventToShortDto(event, initiator, category, confirmedRequests, views);
+    }
+
+    @Override
+    public String getEventStatus(Long eventId) {
+        Event event = eventRepository.findById(eventId)
+                .orElseThrow(() -> new NotFoundException("Событие с ID: " + eventId + " не найдено."));
+        return event.getState().toString();
+    }
+
+    // ==================== ВСПОМОГАТЕЛЬНЫЕ МЕТОДЫ ====================
+
+    private UserShortDto getUser(Long userId) {
+        try {
+            return userClient.getUserShort(userId);
+        } catch (Exception e) {
+            log.warn("Не удалось получить пользователя {}: {}", userId, e.getMessage());
+            return null;
+        }
+    }
+
+    private Map<Long, UserShortDto> getUsers(List<Event> events) {
+        List<Long> userIds = events.stream()
+                .map(Event::getInitiatorId)
+                .distinct()
+                .collect(Collectors.toList());
+
+        Map<Long, UserShortDto> result = new HashMap<>();
+        for (Long userId : userIds) {
+            UserShortDto user = getUser(userId);
+            if (user != null) {
+                result.put(userId, user);
+            }
+        }
+        return result;
+    }
+
+    private Category getCategory(Long categoryId) {
+        return categoryRepository.findById(categoryId).orElse(null);
+    }
+
+    private Map<Long, Category> getCategories(List<Event> events) {
+        List<Long> categoryIds = events.stream()
+                .map(Event::getCategoryId)
+                .distinct()
+                .collect(Collectors.toList());
+
+        return categoryRepository.findAllById(categoryIds)
+                .stream()
+                .collect(Collectors.toMap(Category::getId, c -> c));
+    }
+
+    private Long getViewsCount(Event event) {
+        return getViewsCount(List.of(event)).getOrDefault(event.getId(), 0L);
     }
 
     private Map<Long, Long> getViewsCount(List<Event> events) {
         if (events.isEmpty()) return Collections.emptyMap();
 
-        List<String> uris = new ArrayList<>();
-        for (Event event : events) {
-            String uri = "/events/" + event.getId();
-            uris.add(uri);
-        }
+        List<String> uris = events.stream()
+                .map(event -> "/events/" + event.getId())
+                .collect(Collectors.toList());
 
-        LocalDateTime earliestCratedEvent = events.stream()
+        LocalDateTime earliestCreated = events.stream()
                 .map(Event::getCreatedOn)
                 .min(LocalDateTime::compareTo)
                 .orElse(LocalDateTime.now().minusDays(1));
 
         StatRequestParamDto statRequestParamDto = new StatRequestParamDto(
-                earliestCratedEvent.minusMinutes(1).format(Constants.FORMATTER),
+                earliestCreated.minusMinutes(1).format(Constants.FORMATTER),
                 LocalDateTime.now().plusMinutes(1).format(Constants.FORMATTER),
                 uris,
                 true
         );
 
-        List<StatResponseDto> stats = statClient.getStats(statRequestParamDto);
-
-        Map<Long, Long> result = new HashMap<>();
-        for (StatResponseDto dto : stats) {
-            Long eventId = Long.valueOf(dto.getUri().replace("/events/", ""));
-            Long views = dto.getHits();
-            result.put(eventId, views);
+        try {
+            List<StatResponseDto> stats = statClient.getStats(statRequestParamDto);
+            Map<Long, Long> result = new HashMap<>();
+            for (StatResponseDto dto : stats) {
+                Long eventId = Long.valueOf(dto.getUri().replace("/events/", ""));
+                result.put(eventId, dto.getHits());
+            }
+            return result;
+        } catch (Exception e) {
+            log.warn("Не удалось получить статистику просмотров: {}", e.getMessage());
+            return Collections.emptyMap();
         }
-        return result;
+    }
+
+    private Long getConfirmedRequestsCount(Event event) {
+        return getConfirmedRequestsCount(List.of(event)).getOrDefault(event.getId(), 0L);
     }
 
     private Map<Long, Long> getConfirmedRequestsCount(List<Event> events) {
+        if (events.isEmpty()) return Collections.emptyMap();
+
         List<Long> eventIds = events.stream()
                 .map(Event::getId)
-                .toList();
+                .collect(Collectors.toList());
 
-        List<ConfirmedRequestCount> count = requestRepository
-                .countConfirmedRequestsByEventIds(eventIds, RequestStatus.CONFIRMED);
-
-        return count.stream()
-                .collect(Collectors.toMap(
-                        ConfirmedRequestCount::getEventId,
-                        ConfirmedRequestCount::getCount
-                ));
+        Map<Long, Long> result = new HashMap<>();
+        for (Long eventId : eventIds) {
+            try {
+                Long count = requestClient.getConfirmedRequestsCount(eventId);
+                result.put(eventId, count != null ? count : 0L);
+            } catch (Exception e) {
+                log.warn("Не удалось получить количество подтвержденных запросов для события {}: {}",
+                        eventId, e.getMessage());
+                result.put(eventId, 0L);
+            }
+        }
+        return result;
     }
-
 }
